# distr_comp_labs

lab_1/: CMakeLists.txt  atomic_array.hpp  main.cpp
lab_2/: CMakeLists.txt  main.cpp  multy_queue.hpp
lab_3/: CMakeLists.txt  barrier.hpp  main.cpp
lab_4/: CMakeLists.txt  general_stat.hpp  local_stat.cpp  local_stat.hpp  main.cpp
lab_4/test_files/: .bash_history  .fish_history  first.py  init.vim  user-dirs.dirs
lab_5/: CMakeLists.txt  main.cpp
lab_6/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.hpp  timer.hpp
lab_7/: CMakeLists.txt  add_func.hpp  add_func_debug_output.hpp  main.cpp
